packages/runtime/src/core/__fixtures__/errors/missing-import/main.js
import { missing } from '/non-existent-module.js';
export default missing;
